--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,19 @@
-# .github/workflows/main.yml
-on:
-  push:
-    branches:
-      - main
-      - master
+# # .github/workflows/main.yml
+# on:
+#   push:
+#     branches:
+#       - main
+#       - master
 
-jobs:
-  post_tweet_job:
-    runs-on: ubuntu-latest
-    name: Post tweet to Twitter
-    steps:
-    - name: Tweets link to every commit
-      uses: sw-yx/github-to-tweet-v2@main
-      with:
-        TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
-        TWITTER_API_KEY_SECRET: ${{ secrets.TWITTER_API_KEY_SECRET }}
-        TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-        TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+# jobs:
+#   post_tweet_job:
+#     runs-on: ubuntu-latest
+#     name: Post tweet to Twitter
+#     steps:
+#     - name: Tweets link to every commit
+#       uses: sw-yx/github-to-tweet-v2@main
+#       with:
+#         TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+#         TWITTER_API_KEY_SECRET: ${{ secrets.TWITTER_API_KEY_SECRET }}
+#         TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+#         TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
