--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "promptDelete": false,
+  "promptDelete": true,
   "alwaysUpdateLinks": true,
   "spellcheck": true,
   "showFrontmatter": true,
